# repodoctor

./: .gitignore  README.md  pyproject.toml
src/repodoctor/: __init__.py  cli.py  config.py  models.py  scanner.py  scoring.py  utils.py
src/repodoctor/analyzers/: __init__.py  base.py  complexity.py  dependencies.py  duplication.py  git_analyzer.py
src/repodoctor/output/: __init__.py  html_report.py  json_output.py  terminal.py
src/repodoctor/parsers/: __init__.py  treesitter.py
tests/: __init__.py  conftest.py  test_complexity.py  test_parsers.py  test_scoring.py
